@@ -30,6 +30,7 @@ from sklearn.decomposition import PCA
 from PREDICT.featureselection.Relief import SelectMulticlassRelief
 from sklearn.multiclass import OneVsRestClassifier
 from PREDICT.classification.estimators import RankedSVM
+from imblearn.over_sampling import RandomOverSampler
 
 
 def fit_and_score(estimator, X, y, scorer,
@@ -162,7 +163,7 @@ def fit_and_score(estimator, X, y, scorer,
     # ------------------------------------------------------------------------
     # Feature imputation
     if 'Imputation' in para_estimator.keys():
-        if para_estimator['Imputation'] == 'True':
+        if para_estimator['Imputation']:
             imp_type = para_estimator['ImputationMethod']
             imp_nn = para_estimator['ImputationNeighbours']
 
@@ -170,6 +171,7 @@ def fit_and_score(estimator, X, y, scorer,
                               n_neighbors=imp_nn)
             imputer.fit(feature_values)
             feature_values = imputer.transform(feature_values)
+            # NOTE: Also need to transform feature labels!
         else:
             imputer = None
     else:
@@ -185,7 +187,111 @@ def fit_and_score(estimator, X, y, scorer,
         del imputer
 
     # ------------------------------------------------------------------------
-    # SMOTE
+    # Use SMOTE oversampling
+    if 'SampleProcessing_SMOTE' in para_estimator.keys():
+        if para_estimator['SampleProcessing_SMOTE']:
+
+            # Determine our starting balance
+            pos_initial = int(np.sum(y))
+            neg_initial = int(len(y) - pos_initial)
+            len_in = len(y)
+
+            # Stack all feature values in an array
+            for num, x in enumerate(X):
+                if num == 0:
+                    X_temp = np.zeros((len(x[0]), 1))
+                    X_temp[:, 0] = np.asarray(x[0])
+                else:
+                    xt = np.zeros((len(x[0]), 1))
+                    xt[:, 0] = np.asarray(x[0])
+                    X_temp = np.column_stack((X_temp, xt))
+
+            X_temp = np.transpose(X_temp)
+
+            # Fit SMOTE object and transform dataset
+            # NOTE: need to save random state for this one as well!
+            sm = SMOTE(random_state=None,
+                       ratio=para_estimator['SampleProcessing_SMOTE_ratio'],
+                       m_neighbors=para_estimator['SampleProcessing_SMOTE_neighbors'],
+                       kind='borderline1',
+                       n_jobs=para_estimator['SampleProcessing_n_cores'])
+
+            X, y = sm.fit_sample(X_temp, y)
+
+            # Also make sure our feature label object has the same size
+            # NOTE: Not sure if this is the best implementation
+            feature_labels = np.asarray([feature_labels[0] for x in X])
+
+            # Note the user what SMOTE did
+            pos = int(np.sum(y))
+            neg = int(len(y) - pos)
+            message = ("Sampling with SMOTE from {} ({} pos, {} neg) to {} ({} pos, {} neg) patients.").format(str(len_in),
+                                                                                                               str(pos_initial),
+                                                                                                               str(neg_initial),
+                                                                                                               str(len(y)),
+                                                                                                               str(pos),
+                                                                                                               str(neg))
+            print(message)
+        else:
+            sm = None
+
+    if 'SampleProcessing_SMOTE' in para_estimator.keys():
+        del para_estimator['SampleProcessing_SMOTE']
+        del para_estimator['SampleProcessing_SMOTE_ratio']
+        del para_estimator['SampleProcessing_SMOTE_neighbors']
+        del para_estimator['SampleProcessing_n_cores']
+
+    # Delete the object if we do not need to return it
+    if not return_all:
+        del sm
+
+    # ------------------------------------------------------------------------
+    # Full Oversampling: To Do
+    if 'SampleProcessing_Oversampling' in para_estimator.keys():
+        if para_estimator['SampleProcessing_Oversampling']:
+            if verbose:
+                print('Oversample underrepresented classes in training.')
+
+            # Oversample underrepresented classes in training
+            # We always use a factor 1, e.g. all classes end up with an
+            # equal number of samples
+            if len(y.shape) == 1:
+                # Single Class, use imblearn oversampling
+
+                # Create another random state
+                # NOTE: Also need to save this random seed. Can be same as SMOTE
+                random_seed2 = np.random.randint(5000)
+                random_state2 = check_random_state(random_seed2)
+
+                ros = RandomOverSampler(random_state=random_state2)
+                X, y = ros.fit_sample(X, y)
+
+            else:
+                # Multi class, use own method as imblearn cannot do this
+                sumclass = [np.sum(y[:, i]) for i in range(y.shape[1])]
+                maxclass = np.argmax(sumclass)
+                for i in range(y.shape[1]):
+                    if i != maxclass:
+                        # Oversample
+                        nz = np.nonzero(y[:, i])[0]
+                        noversample = sumclass[maxclass] - sumclass[i]
+                        while noversample > 0:
+                            n_sample = random.randint(0, len(nz) - 1)
+                            n_sample = nz[n_sample]
+                            i_sample = y[n_sample, :]
+                            x_sample = X[n_sample]
+                            y = np.vstack((y, i_sample))
+                            X.append(x_sample)
+                            noversample -= 1
+        else:
+            ros = None
+
+    if 'SampleProcessing_Oversampling' in para_estimator.keys():
+        del para_estimator['SampleProcessing_Oversampling']
+
+    # Delete the object if we do not need to return it
+    if not return_all:
+        del ros
 
     # ------------------------------------------------------------------------
     # Groupwise feature selection
@@ -251,7 +357,6 @@ def fit_and_score(estimator, X, y, scorer,
         SelectModel = None
         pca = None
         StatisticalSel = None
-        imputer = None
         ReliefSel = None
 
         # Delete the non-used fields
@@ -259,7 +364,7 @@ def fit_and_score(estimator, X, y, scorer,
 
         ret = [0, 0, 0, 0, 0, para_estimator, para]
         if return_all:
-            return ret, GroupSel, VarSel, SelectModel, feature_labels[0], scaler, imputer, pca, StatisticalSel, ReliefSel
+            return ret, GroupSel, VarSel, SelectModel, feature_labels[0], scaler, imputer, pca, StatisticalSel, ReliefSel, sm, ros
         else:
             return ret
 
@@ -312,7 +417,7 @@ def fit_and_score(estimator, X, y, scorer,
         StatisticalSel = None
         ret = [0, 0, 0, 0, 0, para_estimator, para]
         if return_all:
-            return ret, GroupSel, VarSel, SelectModel, feature_labels[0], scaler, imputer, pca, StatisticalSel, ReliefSel
+            return ret, GroupSel, VarSel, SelectModel, feature_labels[0], scaler, imputer, pca, StatisticalSel, ReliefSel, sm, ros
         else:
             return ret
 
@@ -361,7 +466,7 @@ def fit_and_score(estimator, X, y, scorer,
         pca = None
         ret = [0, 0, 0, 0, 0, para_estimator, para]
         if return_all:
-            return ret, GroupSel, VarSel, SelectModel, feature_labels[0], scaler, imputer, pca, StatisticalSel, ReliefSel
+            return ret, GroupSel, VarSel, SelectModel, feature_labels[0], scaler, imputer, pca, StatisticalSel, ReliefSel, sm, ros
         else:
             return ret
 
@@ -552,7 +657,7 @@ def fit_and_score(estimator, X, y, scorer,
     ret.append(para)
 
     if return_all:
-        return ret, GroupSel, VarSel, SelectModel, feature_labels[0], scaler, imputer, pca, StatisticalSel, ReliefSel
+        return ret, GroupSel, VarSel, SelectModel, feature_labels[0], scaler, imputer, pca, StatisticalSel, ReliefSel, sm, ros
     else:
         return ret
 
@@ -587,6 +692,15 @@ def delete_nonestimator_parameters(parameters):
         del parameters['StatisticalTestUse']
         del parameters['StatisticalTestMetric']
         del parameters['StatisticalTestThreshold']
+
+    if 'SampleProcessing_SMOTE' in parameters.keys():
+        del parameters['SampleProcessing_SMOTE']
+        del parameters['SampleProcessing_SMOTE_ratio']
+        del parameters['SampleProcessing_SMOTE_neighbors']
+        del parameters['SampleProcessing_n_cores']
+
+    if 'SampleProcessing_Oversampling' in parameters.keys():
+        del parameters['SampleProcessing_Oversampling']
 
     return parameters
 
